Fix mobile nav Reference spacing

--- a/_sass/_handbook.scss
+++ b/_sass/_handbook.scss
@@ -140,7 +140,7 @@
       &:not(:last-of-type)::after {
         display: inline-block;
         font-weight: bold;
-        padding-left: 0.2em;
+        padding: 0 0.3em 0 0.2em;
         content: '/';
       }
 
